# RAG

./: .gitignore  README.md  Untitled-1.ipynb  chatbot.py  chatbots.py  choose_bot.py  coqa.py  doc_loader.py  enums.py  input_perturbations.py  prompter.py  prompts.py  retriever.py  run.py  setup.cfg  utils.py
RAG/: chatbot.py  chatbots.py  config.cfg  doc_loader.py  enums.py  file_loader.py  loader.py  model_config.cfg  orchestrator.py  output_formatter.py  prompter.py  retriever.py  run.py  utils.py  vectordb.py
RAG/AmazonReviews/: amazon.py  data_preprocessing.py
RAG/LAMP/: lamp_eval.py  lamp_retrievers.py  lamp_utils.py  run_exp.py  zero_shot.py
RAG/LAMP/logs/: dev_3_GEMMA-2-27B_K0.json  dev_3_GEMMA-2-27B_K1_contriever.json  dev_3_GEMMA-2-9B_K0.json  dev_3_LLAMA3-8B_K0.json
RAG/LAMP/res_pkls/: LAMP_5_LLAMA2-13B-GGUF_5bit.pkl  LAMP_5_LLAMA2-13B.pkl  LAMP_5_LLAMA2-7B-GGUF_5bit.pkl  LAMP_5_LLAMA2-7B.pkl  LAMP_5_VICUNA-13B-16K-v1.5-GGUF_5bit.pkl  LAMP_5_VICUNA-7B-16K-v1.5-GGUF_5bit.pkl  LAMP_5_VICUNA-7B-16K-v1.5.pkl
RAG/LAMP/res_pkls/D5/K0/: LLAMA2-13B-GGUF.pkl  LLAMA2-13B.pkl  LLAMA2-7B-GGUF.pkl  LLAMA2-7B.pkl  VICUNA-13B-16K-v1.5-GGUF.pkl  VICUNA-13B-v1.5-GGUF.pkl  VICUNA-13B-v1.5.pkl  VICUNA-7B-16K-v1.5-GGUF.pkl  VICUNA-7B-v1.5-GGUF.pkl  VICUNA-7B-v1.5.pkl
RAG/perturbation_test/: eval.py  input_perturbations.py  original_queries.json  perturb_res.json  test1.json  test2.json
RAG/perturbation_test/UniEval/metric/: evaluator.py
cfgs/: doc_loader.cfg
perturbation_test/: eval.py  input_perturbations.py  test1.json  test2.json
(+1386 files in other folders)
