[metadata]
name = RAG
version = 1.0
author = Mert Yazan
author_email = mertyazan2867@gmail.com
description = A framework for Retrieval Augmented Chatbots
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:

[options.packages.find]
include = RAG